--- a/src/app/game-control/game-control.component.html
+++ b/src/app/game-control/game-control.component.html
@@ -1,2 +1,2 @@
-<button class="btn btn-primary" (click)="startGame()">Start Game</button>
-<button class="btn btn-danger" (click)="stopGame()">Stop Game</button>
+<button class="btn btn-primary" (click)="onStartGame()">Start Game</button>
+<button class="btn btn-danger" (click)="onStopGame()">Stop Game</button>
